--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-*{
+body {
+    margin: 0;
+    padding: 0;
     cursor: none;
 }
+
 nav {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     padding: 13px 13px 0 13px;
+    background-color: white;
 }
 
 nav ul {
@@ -34,11 +38,91 @@ nav ul li {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    z-index: 1000;
 }
-#cursorDot{
+
+#cursorDot {
     position: absolute;
     border: 3px solid black;
     border-radius: 50%;
     top: 0;
     left: 0;
+    z-index: 1000;
+}
+
+#slidingHeading {
+    overflow: hidden;
+    display: flex;
+    flex-flow: row nowrap;
+    position: absolute;
+    top: 30%;
+    z-index: 10;
+}
+
+.text-slide {
+    font-size: 200px;
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 30px;
+    align-items: center;
+    /* overflow: hidden; */
+    white-space: nowrap;
+
+    animation-name: slide;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+#headMainContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    /* padding: 0 50px 0 50px; */
+    font-size: 25px;
+    background-color: white;
+    height: 100%;
+    width: 50%;
+}
+#headMainContent:first-child{
+    padding: 0 50px 0 50px;
+    /* width: 100px; */
+}
+
+@keyframes slide {
+    from {
+        transform: translateX(0%);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+#slidingHeading svg {
+    min-width: 100px;
+}
+
+#homeMain{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    flex-direction: column;
+    /* align-items: end; */
+    /* justify-content: space-between; */
+}
+
+#homeMain iframe{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    aspect-ratio: 16 / 9;
+    width: auto;
+    height: auto;
+    min-height: 100%;
+    min-width: 100%;
+    pointer-events: none;
+    z-index: -1;
 }
